# dolibarr-integration-resources

./: README.md
ACCESS_custom_app/: README.md
helloasso/: README.md
helloasso/members-sync-python-ci/: LICENSE  README.md  push_helloasso_members_to_dolibarr.py  pyproject.toml  seek_for_terminated_but_valid_members.py
helloasso/members-sync-python-ci/config/: README.md  config.json  types.json
helloasso/members-sync-python-ci/src/hello_doli_gateway/: conventions.py  gateway.py
helloasso/members-sync-python-ci/src/hello_doli_gateway/dolibarr/: api.py  moke.py
helloasso/members-sync-python-ci/src/hello_doli_gateway/helloasso/: api.py  moke.py
helloasso/members-sync-python-ci/tests/: test_doli.py  test_gateway.py  test_hello.py
make/: README.md
make/code/: metadata.json
make/code/connections/dolibarr-connection/: api.imljson  metadata.json  parameters.imljson
make/code/modules/createEventfromEmail/: api.imljson  expect.imljson  metadata.json  parameters.imljson
make/code/modules/createEventfromGCalendar/: api.imljson  expect.imljson  metadata.json
make/code/modules/createTaskfromGithubIssue/: api.imljson  expect.imljson  interface.imljson  metadata.json
n8n/: README.md  userREADME.md
n8n/code/: .eslintrc.js  .gitignore  README.md  package-lock.json  package.json
n8n/code/credentials/: DolibarrApi.credentials.ts
zapier/: README.md
zapier/code/: .zapierapprc  authentication.js  index.js  package.json
zapier/code/creates/: create_contact.js  create_document.js  create_event.js  create_notification.js  create_task.js  update_currency_rate.js
(+12 files in other folders)
